--- a/bitSlicer/build.gradle
+++ b/bitSlicer/build.gradle
@@ -28,7 +28,25 @@ sourceCompatibility = 1.8
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-
+	compile 'org.jogamp.jogl:jogl-all:2.3.2'
+	compile 'org.jogamp.gluegen:gluegen-rt:2.3.2'
+	
+	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-amd64"
+	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-armv6"
+	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-armv6hf"
+	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-i586"
+	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-macosx-universal"
+	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-windows-amd64"
+	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-windows-i586"
+	
+	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-linux-amd64"
+	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-linux-armv6"
+	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-linux-armv6hf"
+	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-linux-i586"
+	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-macosx-universal"
+	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-solaris-i586"
+	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-windows-amd64"
+	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-windows-i586"
 }
 
 jar {
