--- a/bitSlicer/.settings/org.eclipse.buildship.core.prefs
+++ b/bitSlicer/.settings/org.eclipse.buildship.core.prefs
@@ -7,5 +7,5 @@ connection.project.dir=
 containers=org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/
 derived.resources=.gradle,build
 eclipse.preferences.version=1
-natures=org.eclipse.jdt.core.javanature
+natures=org.eclipse.jdt.core.javanature,org.eclipse.buildship.core.gradleprojectnature
 project.path=\:
