--- a/bitSlicer/build.gradle
+++ b/bitSlicer/build.gradle
@@ -28,6 +28,7 @@ sourceCompatibility = 1.8
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
+	compile 'org.processing:core:3.3.5'
 	compile 'org.jogamp.jogl:jogl-all:2.3.2'
 	compile 'org.jogamp.gluegen:gluegen-rt:2.3.2'
 	
@@ -47,6 +48,10 @@ dependencies {
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-solaris-i586"
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-windows-amd64"
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-windows-i586"
+}
+
+eclipse {
+    project.natures 'org.eclipse.buildship.core.gradleprojectnature'
 }
 
 jar {
