--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ apply plugin: 'java'
 apply plugin: 'application'
 // Apply the eclipse plugin to import project on other machines
 apply plugin: 'eclipse'
+// JUnit 5
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 // Define the entry point
 mainClassName = 'meshIneBits.MeshIneBitsMain'
@@ -19,9 +21,9 @@ applicationName = 'MeshIneBits'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    // Use 'jcenter' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+	// Use 'jcenter' for resolving your dependencies.
+	// You can declare any Maven/Ivy/file repository here.
+	jcenter()
 }
 
 sourceCompatibility = 1.8
@@ -31,7 +33,7 @@ dependencies {
 	compile 'org.processing:core:3.3.5'
 	compile 'org.jogamp.jogl:jogl-all:2.3.2'
 	compile 'org.jogamp.gluegen:gluegen-rt:2.3.2'
-	
+
 	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-amd64"
 	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-armv6"
 	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-armv6hf"
@@ -39,7 +41,7 @@ dependencies {
 	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-macosx-universal"
 	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-windows-amd64"
 	runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-windows-i586"
-	
+
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-linux-amd64"
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-linux-armv6"
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-linux-armv6hf"
@@ -48,16 +50,21 @@ dependencies {
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-solaris-i586"
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-windows-amd64"
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-windows-i586"
+
+	testCompile('org.junit.jupiter:junit-jupiter-api:5.1.0')
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.1.0',
+			'org.junit.platform:junit-platform-launcher:1.1.0')
 }
 
-eclipse {
-    project.natures 'org.eclipse.buildship.core.gradleprojectnature'
+eclipse { project.natures 'org.eclipse.buildship.core.gradleprojectnature' }
+
+buildscript {
+	repositories { mavenCentral() }
+	dependencies { classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0' }
 }
 
 jar {
-    baseName = applicationName
-    version = '0.2.0'
-    manifest {
-        attributes  'Main-Class' : mainClassName
-    }
+	baseName = applicationName
+	version = '0.2.0'
+	manifest { attributes  'Main-Class' : mainClassName }
 }
