--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,8 @@ dependencies {
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-windows-amd64"
 	runtime "org.jogamp.jogl:jogl-all:2.3.2:natives-windows-i586"
 
-	testCompile('org.junit.jupiter:junit-jupiter-api:5.1.0')
+	testCompile('org.junit.jupiter:junit-jupiter-api:5.1.0',
+			'org.junit.jupiter:junit-jupiter-params:5.1.0')
 	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.1.0',
 			'org.junit.platform:junit-platform-launcher:1.1.0')
 }
@@ -68,7 +69,7 @@ eclipse {
 
 				def testres = entries.find { it.path == 'src/test/resources' }
 				testres.output = "bin/test"
-				
+
 				// Remove local ref for libs
 				entries.removeAll{ it.kind == "lib" }
 			}
