--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile 'org.processing:core:3.3.5'
     compile 'org.jogamp.jogl:jogl-all:2.3.2'
     compile 'org.jogamp.gluegen:gluegen-rt:2.3.2'
-    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile 'org.json:json:20180130'
 
     runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-amd64"
     runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-armv6"
@@ -64,7 +64,7 @@ eclipse {
     project.natures 'org.eclipse.buildship.core.gradleprojectnature'
     classpath {
         file {
-            defaultOutputDir = file('bin/main')
+            defaultOutputDir = file("bin/main")
             whenMerged {
                 //change output folder for tests
                 def testsrc = entries.find { it.path == 'src/test/java' }
