Fix jar building script

--- a/build.gradle
+++ b/build.gradle
@@ -103,4 +103,7 @@ jar {
     baseName = applicationName
     version = '0.3.0'
     manifest { attributes 'Main-Class': mainClassName }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
