--- a/build.gradle
+++ b/build.gradle
@@ -37,14 +37,17 @@ sourceCompatibility = 1.8
 // In this section you declare the dependencies for your production and test code
 dependencies {
     implementation 'org.jetbrains:annotations:19.0.0'
-    implementation 'org.deeplearning4j:deeplearning4j-core:1.0.0-beta7'
-    implementation 'org.nd4j:nd4j-native-platform:1.0.0-beta7'
+
+    implementation "org.nd4j:nd4j-native-platform:1.0.0-beta6"
+    implementation 'org.apache.cassandra:cassandra-all:1.1.4'
+    implementation "org.deeplearning4j:deeplearning4j-core:1.0.0-beta6"
+    implementation "ch.qos.logback:logback-classic:1.0.11"
 
     compile 'org.processing:core:3.3.5'
     compile 'org.jogamp.jogl:jogl-all:2.3.2'
     compile 'org.jogamp.gluegen:gluegen-rt:2.3.2'
     testCompile 'org.json:json:20180130'
-    compile files('libs/proscene.jar', 'libs/controlP5.jar', 'libs/xchart-3.6.5.jar','libs/commons-math3-3.3.jar')
+    compile files('libs/proscene.jar', 'libs/controlP5.jar', 'libs/xchart-3.6.5.jar', 'libs/commons-math3-3.3.jar')
 
     runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-amd64"
     runtime "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-armv6"
