coordinate systems transformations fixed

--- a/build.gradle
+++ b/build.gradle
@@ -38,10 +38,11 @@ sourceCompatibility = 1.8
 dependencies {
     implementation 'org.jetbrains:annotations:19.0.0'
 
+    //implementation "org.nd4j:nd4j-cuda-10.2-platform:1.0.0-beta6"
     implementation "org.nd4j:nd4j-native-platform:1.0.0-beta6"
     implementation "org.deeplearning4j:deeplearning4j-core:1.0.0-beta6"
     implementation "ch.qos.logback:logback-classic:1.0.11"
-    compile group: 'org.deeplearning4j', name: 'deeplearning4j-ui', version: '1.0.0-beta6'
+    implementation "org.deeplearning4j:deeplearning4j-ui:1.0.0-beta6"
 
 
     compile 'org.processing:core:3.3.5'
