--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation "org.deeplearning4j:deeplearning4j-core:1.0.0-beta6"
     implementation "ch.qos.logback:logback-classic:1.0.11"
     implementation "org.deeplearning4j:deeplearning4j-ui:1.0.0-beta6"
-
+    compile "org.datavec:datavec-local:1.0.0-beta6"
 
     compile 'org.processing:core:3.3.5'
     compile 'org.jogamp.jogl:jogl-all:2.3.2'
