update obj ignore GIT

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ##############################
+## OBJ
+##############################
+*.obj
+
+##############################
 ## Java
 ##############################
 .mtj.tmp/
