--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation "org.deeplearning4j:deeplearning4j-ui:1.0.0-beta6"
     compile "org.datavec:datavec-local:1.0.0-beta6"
 
+    compile "org.choco-solver:choco-solver:4.10.8"
+
     implementation 'org.jetbrains:annotations:19.0.0'
     compile 'org.processing:core:3.3.5'
     compile 'org.jogamp.jogl:jogl-all:2.3.2'
