--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,8 @@ dependencies {
     implementation 'org.jogamp.jogl:jogl-all:2.3.2'
     implementation 'org.jogamp.gluegen:gluegen-rt:2.3.2'
     testImplementation 'org.json:json:20180130'
-    implementation files('libs/proscene.jar', 'libs/controlP5.jar', 'libs/commons-math3-3.3.jar',
-                        'libs/bridj-0.7.0.jar', 'libs/slf4j-api-1.7.2.jar', 'libs/webcam-capture-0.3.12.jar')
+    implementation files('libs/proscene.jar', 'libs/controlP5.jar', 'libs/commons-math3-3.3.jar')
+                    //    'libs/bridj-0.7.0.jar', 'libs/slf4j-api-1.7.2.jar', 'libs/webcam-capture-0.3.12.jar')
 
     runtimeOnly "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-amd64"
     runtimeOnly "org.jogamp.gluegen:gluegen-rt:2.3.2:natives-linux-armv6"
