--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ buildNumber.properties
 ## Gradle
 ##############################
 bin/
-build/
+build
 .gradle
 .gradletasknamecache
 gradle-app.setting
@@ -69,7 +69,7 @@ local.properties
 ## NetBeans
 ##############################
 nbproject/private/
-build/
+build
 nbbuild/
 dist/
 nbdist/
