--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id "eclipse"
     id "idea"
     id "com.github.johnrengelman.shadow" version "7.1.1"
+
+
 }
 
 // Define the entry point
@@ -72,6 +74,8 @@ dependencies {
     // Java FX
     implementation group: 'org.openjfx', name: 'javafx-controls', version: '19.0.2'
     implementation group: 'org.openjfx', name: 'javafx-fxml', version: '19.0.2'
+
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
 }
 
 eclipse {
